`align-issue-labels` - Fix badges padding on new PR list on mobile

--- a/source/features/align-issue-labels.css
+++ b/source/features/align-issue-labels.css
@@ -1,3 +1,9 @@
+@media screen and (width < 544px) {
+	div[class*='PullsListItem-module__description'] + .rgh-badges-container {
+		margin-block: 10px -9px !important;
+	}
+}
+
 /* TODO: Remove the old styles in 2026 */
 html:not([rgh-OFF-align-issue-labels]) .js-issue-row {
 	/* Move labels in the Issue/PR list below the title */
